# Drone_SuspendedPayload_Navigation

./: .gitignore  README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/lib/payloadDroneNav/: Controller  Planner  pubCamPose
devel/lib/pkgconfig/: payloadDroneNav.pc
devel/share/payloadDroneNav/cmake/: payloadDroneNavConfig.cmake
models/: dronePayload.world
models/drone/: iris_depth_camera.sdf
models/drone/aruco_visual_marker_7/: model.sdf
payload_drone_nav/: CMakeLists.txt  package.xml
payload_drone_nav/models/drone/: iris_depth_camera_multMarkers.sdf
payload_drone_nav/scripts/: attitudeControl.py  loadPose.py  mavros_offboard_attctl_test.py  rl.py
payload_drone_nav/src/: kinodynamic_astar.cpp
scripts/: loadPose.py  stateEstimator.py
src/payloadDroneNav/: CMakeLists.txt
src/payloadDroneNav/include/payloadDroneNav/: bspline.h
src/payloadDroneNav/launch/: MappingSim.launch  dataSim.launch  fpMap.launch  mavrosSim.launch  test.launch
src/payloadDroneNav/rviz/: planner.rviz
src/payloadDroneNav/scripts/: attitudeControl.py  controller.py  geometricControl.py  geometricController_payload.py  helper.py  test.py  trajectoryPlanning.py
src/payloadDroneNav/src/: Controller.cpp  Planner.cpp  bsplineTrajectory.cpp  kinodynamic_astar.cpp
src/payloadState/: CMakeLists.txt  package.xml
src/payloadState/src/: main.cpp
